# HRM

./: .gitignore  API_ENDPOINTS_REFERENCE.md  CLAUDE.md  IMPLEMENTATION_LOG.md  MVPRequirementsDocument.md  RBAC_MIGRATION_PLAN.md  RBAC_PERMISSIONS_REFERENCE.md  README.md  README_SEEDING.md  SECURITY_IMPROVEMENTS.md  cookies.txt  docker-compose.yml  erd.md  seed_db.py  start.sh  stop.sh
backend/: .dockerignore  Dockerfile  README.md  USER_ROLE_PRESERVATION_STRATEGY.md  pyproject.toml  test.db
backend/scripts/: create_permissions_tables.sql  generate_migration_guide.py  migrate_leave_requests.py  seed_database.py  seed_permissions.py  seed_roles.py  test_backward_compatibility.py  test_permission_validation.py  test_permissions.py  test_response_filtering.py  test_user_role_preservation.py  validate_role_mappings.py
backend/src/hrm_backend/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  permission_decorators.py  permission_registry.py  permission_schemas.py  permission_serializer.py  permission_validation.py  response_filtering.py  role_permission_mapping.py  schemas.py  seed_data.py
backend/tests/: README.md  conftest.py  test_assignment_security.py  test_auth.py  test_employee_security.py  test_employees.py  test_enhanced_frontend_role_checking.py  test_ownership_validation.py  test_page_validation.py  test_page_validation_integration.py
backend/tests/integration/: conftest.py  test_assignments_integration.py  test_auth_integration.py  test_departments_integration.py  test_employees_integration.py  test_profile_integration.py  (+2 more)
(+87 files in other folders)
