[project]
name = "hrm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yash Akula", email = "akulayash1996@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.scripts]
hrm-backend = "hrm_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
